Fix drawings alignement (css)

--- a/client/src/app/toolbar/gallery-option/gallery-option.component.scss
+++ b/client/src/app/toolbar/gallery-option/gallery-option.component.scss
@@ -32,14 +32,21 @@
   padding: 0 22px 0 22px;
 }
 
+.alerts-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 50vh;
+  width: 100%;
+  margin-bottom: 65px;
+}
+
 .drawings {
   height: 50vh;
   overflow: auto;
   text-align: left;
   margin-bottom: 65px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .spinner {
